--- a/NewsPaper/templates/news/default.html
+++ b/NewsPaper/templates/news/default.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 
+
 <html lang="en">
 
 <head>
@@ -43,6 +44,18 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'logout' %}">Exit
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'upgrade' %}">Become Author
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+
 
         </ul>
       </div>
