--- a/Newsdesk/templates/account/logout.html
+++ b/Newsdesk/templates/account/logout.html
@@ -2,11 +2,11 @@
 
 {% load i18n %}
 {% block content %}
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}{% trans "Выход" %}{% endblock %}
 
 {% block little_header %}
 <div >
-    <p>{% trans 'Are you sure you want to sign out?' %}</p>
+    <p>{% trans 'Вы уверены, что хотите выйти?' %}</p>
 
     <form method="post" action="{% url 'account_logout' %}">
         {% csrf_token %}
