--- a/Newsdesk/templates/account/signup.html
+++ b/Newsdesk/templates/account/signup.html
@@ -2,13 +2,13 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans "Создать аккаунт" %}{% endblock %}
 
 {% block content %}
 <div style align="center" class="col-lg-6 col-md-10 mx-auto ">
-<h1>{% trans "Sign Up" %}</h1>
+<h1>{% trans "Создать аккаунт" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Уже есть аккаунт?  <a href="{{ login_url }}">Вход</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
@@ -16,7 +16,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button type="submit">{% trans "Войти" %} &raquo;</button>
 </form>
 </div>
 {% endblock %}
