--- a/Newsdesk/templates/posts/mail_response.html
+++ b/Newsdesk/templates/posts/mail_response.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p><h4>Здравствуй, {{ author }}. Новый отклик от пользователя {{ user }}</h4></p>
+    <p><h4>Здравствуйте, {{ author }}. Новый отклик от пользователя {{ user }}</h4></p>
     <h2> Ваше объявление: {{ headline }}</h2><br>
             <a href="{{ link }}">Ссылка на статью</a>
     </li><br><br>
 
-    <h7> С уважением, команда AlexNews</h7>
+
     {% endblock content %}
 </body>
 </html>
